tests/compile-fail/invalid-count.stderr
error: Nom-derive: unexpected type for Count attribute. Expected type: Vec
  --> $DIR/invalid-count.rs:10:8
   |
10 |     a: u32,
   |        ^^^
